<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_name">Login Name</string>
    <string name="password">Password</string>
    <string name="what_do">What does this do?</string>
    <string name="radio_btn">RadioButton</string>
    <string name="check_box">CheckBox</string>
    <string name="dialogMessage">Would you like to exit?</string>
    <string name="dialogOk">Yes</string>
    <string name="dialogTitle">Confirm</string>
    <string name="dialogNo">No</string>
    <string name="startChatBtn">Start Chat</string>
    <string name="newText">New Text</string>
    <string name="sendText">Send Text</string>
</resources>
