<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_row="2"
    android:layout_column="2"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:text="@string/radio_btn"
        android:layout_row="0"
        android:layout_column="0"
        android:id="@+id/listRadio"/>

    <CheckBox
        android:text="@string/check_box"
        android:layout_row="0"
        android:layout_column="1"
        android:id="@+id/listCheckBox"/>

    <Switch
        android:text="@string/what_do"
        android:layout_row="1"
        android:layout_column="0"
        android:id="@+id/listSwitch"/>

    <ImageButton
        android:layout_row="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:id="@+id/cameraBtn"
        tools:src="@android:drawable/ic_menu_camera" />

</GridLayout>